<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mapamieszkan.MainActivity" >

    <TextView
        android:id="@+id/Lokalizacja"
        style="@style/MyTextViewMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Lokalizacja" />

    <TextView
        android:id="@+id/iloscPokoi"
        style="@style/MyTextViewMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Lokalizacja"
        android:layout_alignBottom="@+id/Lokalizacja"
        android:layout_marginLeft="220dp"
        android:layout_toRightOf="@+id/Lokalizacja"
        android:text="@string/ilosc_pokoi" />

    <TextView
        android:id="@+id/CenaPokoju"
        style="@style/MyTextViewMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/iloscPokoi"
        android:layout_alignBottom="@+id/iloscPokoi"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/iloscPokoi"
        android:text="@string/Cena" />

    <TextView
        android:id="@+id/l0"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Lokalizacja"
        android:layout_below="@+id/Lokalizacja"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/l1"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l0"
        android:layout_below="@+id/l0"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/l2"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l1"
        android:layout_below="@+id/l1"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/l3"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l2"
        android:layout_below="@+id/l2"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/l4"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l3"
        android:layout_below="@+id/l3"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/i0"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/l0"
        android:layout_alignBottom="@+id/l0"
        android:layout_alignLeft="@+id/iloscPokoi" />

    <TextView
        android:id="@+id/i1"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l1"
        android:layout_alignLeft="@+id/iloscPokoi" />

    <TextView
        android:id="@+id/i2"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l2"
        android:layout_alignLeft="@+id/i1" />

    <TextView
        android:id="@+id/i3"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l3"
        android:layout_alignLeft="@+id/i2" />

    <TextView
        android:id="@+id/i4"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l4"
        android:layout_alignLeft="@+id/i3" />

    <TextView
        android:id="@+id/c0"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/i0"
        android:layout_alignLeft="@+id/CenaPokoju" />

    <TextView
        android:id="@+id/c1"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/i1"
        android:layout_alignLeft="@+id/c0" />

    <TextView
        android:id="@+id/c2"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/i2"
        android:layout_alignLeft="@+id/c1" />

    <TextView
        android:id="@+id/c3"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/i3"
        android:layout_alignLeft="@+id/c2" />

    <TextView
        android:id="@+id/c4"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/i4"
        android:layout_alignLeft="@+id/c3" />

    <ImageView
        android:id="@+id/ivZdjecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_action_remove" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c1"
        android:layout_alignLeft="@+id/ivZdjecie"
        android:src="@drawable/ic_action_remove" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c2"
        android:layout_alignLeft="@+id/ivZdjecie"
        android:src="@drawable/ic_action_remove" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivZdjecie"
        android:layout_alignBottom="@+id/c3"
        android:src="@drawable/ic_action_remove" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignBottom="@+id/c4"
        android:src="@drawable/ic_action_remove" />

</RelativeLayout>